@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #16373: Prevent infinite recursion for ABC Set class comparisons.
+
 - Issue #19138: doctest's IGNORE_EXCEPTION_DETAIL now allows a match when
   no exception detail exists (no colon following the exception's name, or
   a colon does follow but no text follows the colon).
